vertical resize issue fixed on desktop. not responsive yet

--- a/css/main.sass
+++ b/css/main.sass
@@ -264,7 +264,7 @@ body
     bottom: 0
     margin: 0 auto
     overflow: hidden
-    height: 60%
+    height: 700px
     @media(min-width: 700px)
       .post-image-image
         background-size: cover
@@ -277,6 +277,7 @@ body
         padding-top: 33%
         z-index: 1
         margin: 0 auto
+        // height: 300px
       .article-image
         background-size: cover
         margin: 0 auto
@@ -852,13 +853,6 @@ pre
       a:hover
         border-bottom: 2px #333332 solid
 
-.search
-  // border: 2px green solid
-
-
-  a:hover
-    border-bottom: none
-    transform: scale(2)
 
 //new post header
 
@@ -887,6 +881,7 @@ pre
 
 
 .post-author-image
+
   // border: 3px black solid
   display: inline
   width: 40px
